bin/tests/snapshots/shellcheck__bed95632ab6dc3504e215bba9c0f391e_lint_stderr.snap
---
source: bin/tests/shellcheck.rs
---
{ scripts.hello.exec = ''
  echo $1
''; }
---
[shellcheck] Advice: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:8 ]
   │
 2 │   echo $1
   │        ─┬  
   │         ╰── SC2086: Double quote to prevent globbing and word splitting.
───╯
