bin/tests/snapshots/shellcheck__f0e3538af5ac17e218066c7b0e187d78_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ config = mkIf cfg.enable { systemd.services.${name}.preStart = ''
  rm -rf $CACHE/*
''; }; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 { config = mkIf cfg.enable { systemd.services.${name}.preStart = ''
-  rm -rf $CACHE/*
+  rm -rf "''${CACHE:?}"/*
 ''; }; }
