bin/tests/snapshots/shellcheck__f0e3538af5ac17e218066c7b0e187d78_lint_stderr.snap
---
source: bin/tests/shellcheck.rs
---
{ config = mkIf cfg.enable { systemd.services.${name}.preStart = ''
  rm -rf $CACHE/*
''; }; }
---
[shellcheck] Warning: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:10 ]
   │
 2 │   rm -rf $CACHE/*
   │          ───┬┬───  
   │             ╰────── SC2086: Double quote to prevent globbing and word splitting.
   │              │     
   │              ╰───── SC2115: Use "${var:?}" to ensure this never expands to /* .
───╯
