bin/tests/snapshots/shellcheck__fa8337d6aa86b4af235e5ae93aed37ea_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ enterShell = ''
  echo ''${GREETING}
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 { enterShell = ''
-  echo ''${GREETING}
+  echo "''${GREETING}"
 ''; }
