bin/tests/snapshots/shellcheck__fa8337d6aa86b4af235e5ae93aed37ea_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ enterShell = ''
  echo ''${GREETING}
''; }
---
<temp_file_path>>2:8:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
