bin/tests/snapshots/shellcheck__fa8337d6aa86b4af235e5ae93aed37ea_lint_stderr.snap
---
source: bin/tests/shellcheck.rs
---
{ enterShell = ''
  echo ''${GREETING}
''; }
---
[shellcheck] Advice: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:8 ]
   │
 2 │   echo ''${GREETING}
   │        ──────┬──────  
   │              ╰──────── SC2086: Double quote to prevent globbing and word splitting.
───╯
